@@ -200,8 +200,8 @@ sub postamble_rpms
 
 	return '' if $^O eq 'MSWin32';
 	
-	my @dirs = qw{rpms rpms/BUILD rpms/RPMS rpms/SOURCES
-		      rpms/SPECS rpms/SRPMS};
+	my @dirs = qw{$(RPMS_DIR) $(RPMS_DIR)/BUILD $(RPMS_DIR)/RPMS 
+		      $(RPMS_DIR)/SOURCES $(RPMS_DIR)/SPECS $(RPMS_DIR)/SRPMS};
 	my $cwd = getcwd();
 	
 	my %subs = (
@@ -215,7 +215,10 @@ sub postamble_rpms
 		} keys %subs).'\'';
 
 "
-rpms/:
+
+RPMS_DIR=\$(HOME)/rpms
+
+\$(RPMS_DIR)/:
 	-mkdir @dirs
 
 SUBSTITUTE=$substitute
@@ -223,9 +226,9 @@ SUBSTITUTE=$substitute
 perl-\$(DISTNAME).spec :: perl-\$(DISTNAME).spec.in \$(VERSION_FROM) Makefile
 	\$(SUBSTITUTE) \$< > \$@
 
-dist-rpms :: Makefile dist perl-\$(DISTNAME).spec rpms/
-	cp \$(DISTNAME)-\$(VERSION).tar.gz rpms/SOURCES/
-	rpmbuild -ba --define \"_topdir $cwd/rpms\" perl-\$(DISTNAME).spec
+dist-rpms :: Makefile dist perl-\$(DISTNAME).spec \$(RPMS_DIR)
+	cp \$(DISTNAME)-\$(VERSION).tar.gz \$(RPMS_DIR)/SOURCES/
+	rpmbuild -ba --define \"_topdir \$(RPMS_DIR)\" perl-\$(DISTNAME).spec
 ";
 }
 
